feat: debug header

--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -10,6 +10,7 @@ $bg-9: #ee2852;
 $bg-10: #00000026;
 $bg-11: #f3d0c7;
 $bg-12: #e1c0b0;
+$bg-li: #f0cebe;
 $white: #ffffff;
 $text-1: #f5d8ca;
 $text-2: #f8d12d;
