--- a/src/assets/style/_reset.scss
+++ b/src/assets/style/_reset.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Mulish', sans-serif;
+}
+
 ul{
     list-style: none;
 }
@@ -15,3 +19,4 @@ button{
 a{
     text-decoration: none;
 }
+
